# openwrt-pkgs

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: rust.yml
utils/filogic-optimizer/: Makefile
utils/filogic-optimizer/files/: filogic-fq-replace.hotplug  filogic-optimizer  filogic-optimizer.init  filogic-wed-offload.hotplug
utils/jitterentropy-rustrngd/: Makefile
utils/jitterentropy-rustrngd/files/: jitterentropy-rustrngd.init
utils/jitterentropy-rustrngd/src/: Cargo.toml  build.rs
utils/jitterentropy-rustrngd/src/scripts/: patch-integrity.py
utils/jitterentropy-rustrngd/src/src/: hmac.rs  integrity.rs  jent_ffi.rs  main.rs
