[package]
name = "jitterentropy-rustrngd"
version = "0.1.0"
edition = "2021"
description = "SP800-90B jitter entropy daemon for OpenWrt"
license = "GPL-2.0-only"

[[bin]]
name = "jitterentropy-rustrngd"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = "s"   # size-optimized for embedded target
strip = true
