[package]
name = "jitterentropy-rustrngd"
version = "0.2.0"
edition = "2021"
description = "SP800-90B jitter entropy daemon for OpenWrt"
license = "BSD-3-Clause"

[[bin]]
name = "jitterentropy-rustrngd"
path = "src/main.rs"

[dependencies]
libc = "0.2"
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[build-dependencies]
cc = "1.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[profile.release]
opt-level = "s"   # size-optimized for embedded target
strip = true
